allow ui overrides via ui_overrides.json

--- a/generators/templates/main/main.j2
+++ b/generators/templates/main/main.j2
@@ -72,11 +72,28 @@ def read_root():
 
 @app.get('/api/metadata')
 def get_entities_metadata():
-    return [
+    ui_overrides = load_config(Path('ui_overrides.json'))
+    metadata =  [
 {% for entity in entities %}
         {{ entity }}.get_metadata(),     
 {% endfor %}
     ]
+    for m in metadata:
+        entity = m.get('entity')
+        if entity and entity in ui_overrides.keys():
+            deep_merge_dicts(m, ui_overrides[entity])
+    return metadata
+
+def deep_merge_dicts(dest, override):
+    for key, value in override.items():
+        if (
+            key in dest
+            and isinstance(dest[key], dict)
+            and isinstance(value, dict)
+        ):
+            deep_merge_dicts(dest[key], value)
+        else:
+            dest[key] = value
 
 if __name__ == '__main__':
     import uvicorn
