add detailed error mesages to ReST

--- a/generators/templates/routes/route.j2
+++ b/generators/templates/routes/route.j2
@@ -18,8 +18,9 @@ async def create_{{ entity|lower }}(item: {{ entity}}Create):
         await doc.save()  # This triggers BaseEntity's default factories and save() override.
         logging.info(f"{{ entity}} created successfully with _id: {doc._id}")
     except Exception as e:
+        msg = str(e).replace('\n', ' ')
         logging.exception("Failed to create {{ entity|lower }}.")
-        raise HTTPException(status_code=500, detail='Internal Server Error')
+        raise HTTPException(status_code=500, detail=f'Internal Server Error: {msg}')
     
     return doc
 
@@ -31,8 +32,9 @@ async def get_all_{{ entity|lower }}s():
         docs = await {{ entity}}.find_all().to_list()
         logging.info(f"Fetched {len(docs)} {{ entity|lower }}(s) successfully.")
     except Exception as e:
+        msg = str(e).replace('\n', ' ')
         logging.exception("Failed to fetch all {{ entity|lower }}s.")
-        raise HTTPException(status_code=500, detail='Internal Server Error')
+        raise HTTPException(status_code=500, detail=f'Internal Server Error: {msg}')
     
     return docs
 
@@ -49,8 +51,9 @@ async def get_{{ entity|lower }}(item_id: str):
     except HTTPException as he:
         raise he
     except Exception as e:
+        msg = str(e).replace('\n', ' ')
         logging.exception(f"Failed to fetch {{ entity}} with _id: {item_id}")
-        raise HTTPException(status_code=500, detail='Internal Server Error')
+        raise HTTPException(status_code=500, detail=f'Internal Server Error: {msg}')
     
     return doc
 
@@ -75,8 +78,9 @@ async def update_{{ entity|lower }}(item_id: str, item: {{ entity}}Create):
     except HTTPException as he:
         raise he
     except Exception as e:
+        msg = str(e).replace('\n', ' ')
         logging.exception(f"Failed to update {{ entity}} with _id: {item_id}")
-        raise HTTPException(status_code=500, detail='Internal Server Error')
+        raise HTTPException(status_code=500, detail=f'Internal Server Error: {msg}')
     
     return doc
 
@@ -94,8 +98,9 @@ async def delete_{{ entity|lower }}(item_id: str):
     except HTTPException as he:
         raise he
     except Exception as e:
+        msg = str(e).replace('\n', ' ')
         logging.exception(f"Failed to delete {{ entity}} with _id: {item_id}")
-        raise HTTPException(status_code=500, detail='Internal Server Error')
+        raise HTTPException(status_code=500, detail=f'Internal Server Error: {msg}')
     
     return {'message': '{{ entity}} deleted successfully'}
 
