--- a/generators/templates/main/main.j2
+++ b/generators/templates/main/main.j2
@@ -1,6 +1,6 @@
 import sys
 from pathlib import Path
-rom fastapi.exception_handlers import request_validation_exception_handler
+from fastapi.exception_handlers import request_validation_exception_handler
 from fastapi.exceptions import RequestValidationError
 import app.utilities.utils as utils
 from app.db import Database
@@ -77,7 +77,6 @@ async def validation_exception_handler(request: Request, exc: RequestValidationE
         logger.error(f"Validation failed on field `{field}`: {err['msg']}")
     # Delegate to FastAPI’s built‑in handler (it will read the body correctly)
     return await request_validation_exception_handler(request, exc)
-)
 
 @app.on_event('startup')
 async def startup_event():
@@ -104,11 +103,6 @@ def get_entities_metadata():
         {{ entity }}.get_metadata(),     
 {% endfor %}
     ]
-    for m in metadata:
-        entity = m.get('entity')
-        if entity and entity in overrides.keys():
-            deep_merge_dicts(m, overrides[entity])
-    return metadata
 
 def deep_merge_dicts(dest, override):
     for key, value in override.items():
