update templates to support ES

--- a/src/generators/templates/routes/route.j2
+++ b/src/generators/templates/routes/route.j2
@@ -16,7 +16,7 @@ async def create_{{ entity|lower }}(item: {{ entity}}Create):
     doc = {{ entity}}(**item.dict(exclude_unset=True))
     try:
         await doc.save()  # This triggers BaseEntity's default factories and save() override.
-        logging.info(f"{{ entity}} created successfully with _id: {doc._id}")
+        logging.info(f"{{ entity}} created successfully with _id: {doc.id}")
     except Exception as e:
         msg = str(e).replace('\n', ' ')
         logging.exception("Failed to create {{ entity|lower }}.")
