--- a/src/generators/templates/main/main.j2
+++ b/src/generators/templates/main/main.j2
@@ -3,7 +3,7 @@ from pathlib import Path
 from fastapi.exception_handlers import request_validation_exception_handler
 from fastapi.exceptions import RequestValidationError
 import app.utils as utils
-from db import Database
+from app.db import Database
 
 {# --- Dynamic Import of Service Classes --- #}
 {% for service in services %}
