--- a/src/generators/templates/main/main.j2
+++ b/src/generators/templates/main/main.j2
@@ -51,6 +51,7 @@ args = parse_args()
 LOG_FILE = "app.log"
 config = utils.load_system_config(args.config_file)
 is_dev = config.get('environment', 'production') == 'development'
+project = config.get('project_name', 'Project Name Here')
 my_log_level = (args.log_level or 
                config.get('log_level', 'info' if is_dev else 'warning')).upper()
 
@@ -204,12 +205,12 @@ async def shutdown_event():
 
 @app.get('')
 def read_root():
-    return {'message': 'Welcome to the {{ project_name }} Management System'}
+    return {'message': f'Welcome to the {project} Management System'}
 
 @app.get('/api/metadata')
 def get_entities_metadata():
     return  {
-        "projectName": "{{ project_name }}",
+        "projectName": project,
         "entities": [
         {% for entity in entities %}
             {{ entity }}.get_metadata(),
